clusters/cloudydad/apps/rustdesk/app/rustdesk-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: rustdesk
  labels:
    goldilocks.fairwinds.com/enabled: 'true'
