clusters/cloudydad/apps/rustdesk/app/rustdesk-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: rustdesk-tcp-ports
  namespace: rustdesk
spec:
  selector:
    app: rustdesk-app
  ports:
    - name: tcp-port-1
      port: 21115
      targetPort: 21115
    - name: tcp-port-2
      port: 21116
      targetPort: 21116
    - name: tcp-port-3
      port: 21117
      targetPort: 21117
---
apiVersion: v1
kind: Service
metadata:
  name: rustdesk-udp-ports
  namespace: rustdesk
spec:
  selector:
    app: rustdesk-app
  ports:
    - name: udp-port-1
      port: 21116
      targetPort: 21116
      protocol: UDP
