clusters/cloudydad/apps/rustdesk/app/rustdesk-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rustdesk-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  rules:
    - host: rustdesk.cloudydad.world
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  name: web
  tls:
    - secretName: rustdesk-tls #pragma: allowlist secret
